--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "phaser": "^3.50.0",
+    "gh-pages": "^6.0.0",
+    "phaser": "^3.60.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   }
