--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open --openssl-legacy-provider"
   },
@@ -33,6 +35,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "express": "^4.18.2",
     "gh-pages": "^6.0.0",
     "phaser": "^3.60.0",
