--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^8.48.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^4.5.2",
     "raw-loader": "^3.1.0",
